tests/first_class_functions/first_class_function_return_error.june
// error: type mismatch for arg

fun bar() -> fun(i64) -> i64 {
    return foo
}

fun foo(x: i64) -> i64 {
    return x + 10
}

println(bar()(c"bob"))